--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.16",
+    "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "firebase": "^9.2.0",
+    "framer-motion": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -28,6 +31,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.2",
     "firebase-tools": "^9.21.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
