--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@emotion/styled": "^11.3.0",
     "firebase": "^9.2.0",
     "framer-motion": "^4.0.0",
+    "luxon": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
+    "react-use": "^17.3.1",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/luxon": "^2.0.7",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
