--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-use": "^17.3.1",
+    "rxjs": "^7.4.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
