--- a/package.json
+++ b/package.json
@@ -2,64 +2,31 @@
   "name": "temp-drive",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "backend",
+    "frontend"
+  ],
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "format:check": "prettier **/*.{js,jsx,ts,tsx,json,css,scss,md} --check --no-error-on-unmatched-pattern",
+    "start:backend": "yarn workspace temp-drive-backend start",
+    "start:frontend": "yarn workspace temp-drive-frontend start",
+    "build": "yarn workspaces run build",
+    "test": "yarn workspaces run test",
+    "lint": "yarn workspaces run eslint .",
+    "lint:fix": "yarn workspaces run eslint . --fix",
+    "format": "prettier **/*.{js,jsx,ts,tsx,json,css,scss,md} --check --no-error-on-unmatched-pattern",
+    "format:fix": "prettier **/*.{js,jsx,ts,tsx,json,css,scss,md} --write . --no-error-on-unmatched-pattern",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "@chakra-ui/icons": "^1.0.16",
-    "@chakra-ui/react": "^1.6.10",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "firebase": "^9.2.0",
-    "formik": "^2.2.9",
-    "framer-motion": "^4.0.0",
-    "luxon": "^2.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-error-boundary": "^3.1.4",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.0",
-    "react-use": "^17.3.1",
-    "rxjs": "^7.4.0",
-    "web-vitals": "^1.0.1"
-  },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/luxon": "^2.0.7",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.3.2",
     "firebase-tools": "^9.21.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
-    "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=16.13.0",
     "yarn": ">=1.22.17"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
