--- a/firebase.json
+++ b/firebase.json
@@ -1,23 +1,12 @@
 {
   "hosting": {
-    "predeploy": "yarn build",
-    "public": "build",
+    "predeploy": "yarn workspace temp-drive-frontend build",
+    "public": "frontend/build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
-      }
-    ],
-    "headers": [
-      {
-        "source": "/service-worker.js",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "no-cache"
-          }
-        ]
       }
     ]
   },
