--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["react-app", "react-app/jest", "../.eslintrc.json"]
+  "extends": ["react-app", "react-app/jest"],
+  "ignorePatterns": ["/node_modules/**/*", "/build/**/*"]
 }
