--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start:frontend": "yarn workspace temp-drive-frontend start",
     "build": "yarn workspaces run build",
     "test": "yarn workspaces run test",
-    "lint": "yarn workspaces run eslint .",
-    "lint:fix": "yarn workspaces run eslint . --fix",
+    "lint": "yarn workspaces run lint",
     "format": "prettier **/*.{js,jsx,ts,tsx,json,css,scss,md} --check --no-error-on-unmatched-pattern",
     "format:fix": "prettier **/*.{js,jsx,ts,tsx,json,css,scss,md} --write . --no-error-on-unmatched-pattern",
     "prepare": "husky install"
