--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,25 @@
 
 # dependencies
 **/node_modules
-/.pnp
-.pnp.js
 
 # testing
-/coverage
+**/coverage
 
 # production
 **/build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+**/.DS_Store
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
 
 # firebase
-.firebase
-firebase-debug.log
-firebase-debug.*.log
+**/.firebase
+**/firebase-debug.log
+**/firebase-debug.*.log
