--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "typescript": "^4.1.2"
   },
   "browserslist": {
     "production": [
