--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "start:backend": "yarn workspace temp-drive-backend start",
     "start:frontend": "yarn workspace temp-drive-frontend start",
-    "build": "yarn workspaces run build",
-    "test": "yarn workspaces run test",
-    "lint": "yarn workspaces run lint",
+    "build": "CI=true yarn workspaces run build",
+    "test": "CI=true yarn workspaces run test",
+    "lint": "CI=true yarn workspaces run lint",
     "format": "prettier **/*.{js,jsx,ts,tsx,json,css,scss,md} --check --no-error-on-unmatched-pattern",
     "format:fix": "prettier **/*.{js,jsx,ts,tsx,json,css,scss,md} --write . --no-error-on-unmatched-pattern",
     "prepare": "husky install"
@@ -20,8 +20,7 @@
     "firebase-tools": "^9.21.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
-    "prettier": "^2.4.1",
-    "typescript": "^4.1.2"
+    "prettier": "^2.4.1"
   },
   "engines": {
     "node": ">=16.13.0",
